<resources>
    <string name="app_name">My Application</string>
    <string name="tabletka_id">Таблетка</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="log_in">Войдите, чтобы не забывать принимать лекарства</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="enter_button">Войти</string>
    <string name="regist_button">Зарегистрироваться</string>
    <string name="forget_button">Забыли пароль?</string>
    <string name="withoutregistr_button">Войти без регистрации</string>

    <string name="authorization">Регистрация</string>
    <string name="hint_name">Имя</string>
    <string name="hint_bday">Дата рождения</string>
    <string name="hint_weight">Вес</string>
    <string name="hint_repeatpasswd">Пароль еще раз</string>

    <string name="acc_email">Email</string>
    <string name="acc_name">Имя</string>
    <string name="acc_bday">Дата рождения</string>
    <string name="acc_weight">Вес</string>
    <string name="acc_passwd">Пароль</string>
    <string name="acc_button_save">Сохранить</string>
    <string name="acc_button_exit">Выйти из аккаунта</string>

    <string name="add_medicine_dosage">Дозировка</string>
    <string name="add_medicine_units">Единицы измерения</string>
    <string name="add_medicine_eat1">До еды</string>
    <string name="add_medicine_eat2">После еды</string>
    <string name="add_medicine_eat3">Во время еды</string>
    <string name="add_medicine_eat4">Неважно</string>
    <string name="add_medicine_reception">Прием 1</string>
    <string name="add_medicine_add"><font color="#F2641A">Еще</font></string>
    <string name="add_medicine_remind">Напоминать</string>
    <string name="add_medicine_days">Дни приема</string>
    <string name="add_medicine_start">Начало</string>
    <string name="add_medicine_end">Окончание</string>
    <string name="add_medicine_add_btn">Добавить</string>
    <string name="change_medicine_save_btn">Сохранить</string>


</resources>