<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/welcome_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center_horizontal|top"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/log_in_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="178dp"
        android:gravity="center_horizontal|top"
        android:text="@string/log_in"
        android:textColor="@color/gray"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="215dp"
        android:autofillHints=""
        android:background="@drawable/rectangle"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="13sp"
        android:paddingLeft="16dp"/>

    <EditText
        android:id="@+id/user_passwd"
        android:layout_width="283dp"
        android:layout_height="48dp"
        android:layout_below="@+id/user_email"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="267dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="13sp"
        android:paddingLeft="16dp"/>

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="283dp"
        android:layout_height="48dp"
        android:layout_below="@id/user_passwd"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="360dp"
        android:background="@drawable/rectangle_button_blue"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/enter_button"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_fogetpswd"
        android:layout_width="283dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="415dp"
        android:background="@drawable/rectangle_button_wb"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/forget_button"
        android:textColor="@color/blue"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_withoutregistr"
        android:layout_width="283dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="500dp"
        android:background="@drawable/rectangle_button_blue"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/withoutregistr_button"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_register_screen"
        android:layout_width="283dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="610dp"
        android:background="@drawable/rectangle_button_white"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/regist_button"
        android:textColor="@color/blue"
        android:textSize="13sp" />

</RelativeLayout>