<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/authorization_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center_horizontal|top"
        android:text="@string/authorization"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="220dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_below="@+id/email"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/hint_name"
        android:paddingLeft="16dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/birthday"
        android:layout_below="@+id/name"
        android:hint="@string/hint_bday"
        android:inputType="date"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="13sp"
        android:paddingLeft="16dp"/>

    <EditText
        android:id="@+id/weight"
        android:layout_below="@+id/birthday"
        android:hint="@string/hint_weight"
        android:inputType="numberDecimal"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="13sp"
        android:paddingLeft="16dp"/>

    <EditText
        android:id="@+id/passwd"
        android:layout_below="@+id/weight"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="13sp"
        android:paddingLeft="16dp"/>

    <EditText
        android:id="@+id/rePasswd"
        android:layout_below="@+id/passwd"
        android:hint="@string/hint_repeatpasswd"
        android:inputType="textPassword"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="13sp"
        android:paddingLeft="16dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_below="@id/rePasswd"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="565dp"
        android:background="@drawable/rectangle_button_blue"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/regist_button"
        android:textColor="@color/white" />

    <View
        android:id="@+id/vector"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="690dp"
        android:background="@drawable/Vector" />

</RelativeLayout>