<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMedicineActivity">

    <EditText
        android:id="@+id/medname_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_button_white"
        android:fontFamily="@font/inter_semibold"
        android:text="Введите название лекарства"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/add_med_exit_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_toStartOf="@+id/medname_id"
        android:background="@drawable/add_med_btn" />

    <TextView
        android:id="@+id/dosage_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingLeft="50dp"
        android:text="@string/add_medicine_dosage"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/dosage_spinner"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dosage_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/units_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingLeft="50dp"
        android:text="@string/add_medicine_units"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/units_spinner"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/units_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/reception_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingLeft="50dp"
        android:text="@string/add_medicine_reception"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/time_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="350dp"
        android:layout_toEndOf="@+id/reception_id"
        android:background="@drawable/rectangle_button_white"
        android:ems="10"
        android:fontFamily="@font/inter_semibold"
        android:inputType="time"
        android:text="14:00"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/receptionadd_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reception_id"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingLeft="70dp"
        android:text="@string/add_medicine_add"
        android:textSize="14sp" />

    <Button
        android:id="@+id/receptionadd_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="355dp"
        android:layout_toEndOf="@+id/receptionadd_id"
        android:background="@drawable/add_med_btn" />

    <TextView
        android:id="@+id/remind_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingLeft="50dp"
        android:text="@string/add_medicine_remind"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/remind_spinner"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="440dp"
        android:layout_toEndOf="@+id/remind_id" />

    <TextView
        android:id="@+id/days_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remind_id"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingLeft="50dp"
        android:text="@string/add_medicine_days"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/days_spinner"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remind_spinner"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/days_id" />

    <TextView
        android:id="@+id/start_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/days_id"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingLeft="50dp"
        android:text="@string/add_medicine_start"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/end_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_id"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingLeft="50dp"
        android:text="@string/add_medicine_end"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_below="@+id/end_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle_button_orange"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/add_medicine_add_btn"
        android:textColor="@color/white" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="260dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/add_medicine_eat1" />

        <RadioButton
            android:id="@+id/radio_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/add_medicine_eat2" />

        <RadioButton
            android:id="@+id/radio_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/add_medicine_eat3" />

        <RadioButton
            android:id="@+id/radio_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/add_medicine_eat4" />
    </RadioGroup>

    <EditText
        android:id="@+id/startTextDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/days_spinner"
        android:layout_marginStart="60dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/start_id"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/endTextDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startTextDate"
        android:layout_marginStart="160dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="date" />
</RelativeLayout>
  